cassandra_cql_parser.c
/* Generated by re2c 0.13.5 on Thu Oct  6 18:47:38 2011 */
/*
  +----------------------------------------------------------------------+
  | PHP Version 5                                                        |
  +----------------------------------------------------------------------+
  | Copyright (c) 1997-2010 The PHP Group                                |
  +----------------------------------------------------------------------+
  | This source file is subject to version 3.01 of the PHP license,      |
  | that is bundled with this package in the file LICENSE, and is        |
  | available through the world-wide-web at the following url:           |
  | http://www.php.net/license/3_01.txt                                  |
  | If you did not receive a copy of the PHP license and are unable to   |
  | obtain it through the world-wide-web, please send a note to          |
  | license@php.net so we can mail you a copy immediately.               |
  +----------------------------------------------------------------------+
  | Author: Gasol Wu <gasol.wu@gmail.com>                                |
  +----------------------------------------------------------------------+
*/
#include "php.h"

#define YYCTYPE         unsigned char
#define YYCURSOR        cql
#define YYLIMIT         cql
#define YYMARKER		q
#define YYFILL(n)

char *tokendup(char *str)
{
	int len = 0;
	char *begin = str;
    char ch = NULL;
	while (ch = *str) {
        if (ch == ' ') {
            break;
        }
        ++len;
		++str;
	}
	if (len > 0) {
		char *ret = emalloc(len+1);
		strncpy(ret, begin, len);
        ret[len] = '\0';
		return ret;
	} else {
		return NULL;
	}
}

char *scan_keyspace(char *cql)
{
    char *q;

{
	YYCTYPE yych;

	if ((YYLIMIT - YYCURSOR) < 5) YYFILL(5);
	yych = *YYCURSOR;
	if (yych <= 'T') {
		if (yych != ' ') goto yy5;
	} else {
		if (yych <= 'U') goto yy4;
		if (yych == 'u') goto yy4;
		goto yy5;
	}
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 'T') {
		if (yych == ' ') goto yy13;
	} else {
		if (yych <= 'U') goto yy12;
		if (yych == 'u') goto yy12;
	}
yy3:
	{return (char*) 0;}
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'S') goto yy6;
	if (yych == 's') goto yy6;
	goto yy3;
yy5:
	yych = *++YYCURSOR;
	goto yy3;
yy6:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy8;
	if (yych == 'e') goto yy8;
yy7:
	YYCURSOR = YYMARKER;
	goto yy3;
yy8:
	yych = *++YYCURSOR;
	if (yych != ' ') goto yy7;
yy9:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych == ' ') goto yy9;
	{return tokendup(YYCURSOR);}
yy12:
	yych = *++YYCURSOR;
	if (yych == 'S') goto yy6;
	if (yych == 's') goto yy6;
	goto yy7;
yy13:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
	if (yych <= 'T') {
		if (yych == ' ') goto yy13;
		goto yy7;
	} else {
		if (yych <= 'U') goto yy12;
		if (yych == 'u') goto yy12;
		goto yy7;
	}
}

}

char *scan_columnfamily(char *cql)
{
	char *q;

{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	if ((YYLIMIT - YYCURSOR) < 10) YYFILL(10);
	yych = *YYCURSOR;
	if (yych <= 'R') {
		if (yych != ' ') goto yy20;
	} else {
		if (yych <= 'S') goto yy19;
		if (yych == 's') goto yy19;
		goto yy20;
	}
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 'R') {
		if (yych == ' ') goto yy43;
	} else {
		if (yych <= 'S') goto yy42;
		if (yych == 's') goto yy42;
	}
yy18:
	{return (char*) 0;}
yy19:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'E') goto yy21;
	if (yych == 'e') goto yy21;
	goto yy18;
yy20:
	yych = *++YYCURSOR;
	goto yy18;
yy21:
	yych = *++YYCURSOR;
	if (yych == 'L') goto yy23;
	if (yych == 'l') goto yy23;
yy22:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 0) {
		goto yy18;
	} else {
		goto yy41;
	}
yy23:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy24;
	if (yych != 'e') goto yy22;
yy24:
	yych = *++YYCURSOR;
	if (yych == 'C') goto yy25;
	if (yych != 'c') goto yy22;
yy25:
	yych = *++YYCURSOR;
	if (yych == 'T') goto yy26;
	if (yych != 't') goto yy22;
yy26:
	yych = *++YYCURSOR;
	if (yych != ' ') goto yy22;
	yych = *++YYCURSOR;
	if (yych == ' ') goto yy30;
	goto yy29;
yy28:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy29:
	if (yych == '\n') goto yy22;
	if (yych == ' ') goto yy34;
	goto yy28;
yy30:
	yych = *++YYCURSOR;
	if (yych != ' ') goto yy29;
yy31:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= ' ') {
		if (yych == '\n') goto yy22;
		if (yych <= 0x1F) goto yy28;
		goto yy31;
	} else {
		if (yych <= 'F') {
			if (yych <= 'E') goto yy28;
		} else {
			if (yych != 'f') goto yy28;
		}
	}
yy33:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= ' ') {
		if (yych == '\n') goto yy22;
		if (yych <= 0x1F) goto yy28;
	} else {
		if (yych <= 'R') {
			if (yych <= 'Q') goto yy28;
			goto yy36;
		} else {
			if (yych == 'r') goto yy36;
			goto yy28;
		}
	}
yy34:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= ' ') {
		if (yych == '\n') goto yy22;
		if (yych <= 0x1F) goto yy28;
		goto yy34;
	} else {
		if (yych <= 'F') {
			if (yych <= 'E') goto yy28;
			goto yy33;
		} else {
			if (yych == 'f') goto yy33;
			goto yy28;
		}
	}
yy36:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= ' ') {
		if (yych == '\n') goto yy22;
		if (yych <= 0x1F) goto yy28;
		goto yy34;
	} else {
		if (yych <= 'O') {
			if (yych <= 'N') goto yy28;
		} else {
			if (yych != 'o') goto yy28;
		}
	}
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= ' ') {
		if (yych == '\n') goto yy22;
		if (yych <= 0x1F) goto yy28;
		goto yy34;
	} else {
		if (yych <= 'M') {
			if (yych <= 'L') goto yy28;
		} else {
			if (yych != 'm') goto yy28;
		}
	}
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych == '\n') goto yy22;
	if (yych != ' ') goto yy28;
yy39:
	yyaccept = 1;
	YYMARKER = ++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= ' ') {
		if (yych == '\n') goto yy41;
		if (yych <= 0x1F) goto yy28;
		goto yy39;
	} else {
		if (yych <= 'F') {
			if (yych <= 'E') goto yy28;
			goto yy33;
		} else {
			if (yych == 'f') goto yy33;
			goto yy28;
		}
	}
yy41:
	{return tokendup(YYCURSOR);}
yy42:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy21;
	if (yych == 'e') goto yy21;
	goto yy22;
yy43:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 9) YYFILL(9);
	yych = *YYCURSOR;
	if (yych <= 'R') {
		if (yych == ' ') goto yy43;
		goto yy22;
	} else {
		if (yych <= 'S') goto yy42;
		if (yych == 's') goto yy42;
		goto yy22;
	}
}

}
